# ttbuilder

./: LICENSE  README.md  pyproject.toml  setup.cfg
notes/TTBuilder/: Goals.md  Issues.md  Path discovery.md
notes/TTBuilder/.obsidian/: workspace.json
src/: activity.py  cajontime.py  elements.py  helper.py  local_timetable.py  timing_point.py  train_category.py  train_types.py  ttbuilder.py  version.py  wtt.py
src/common/: __init__.py  activity.py  timing_point.py
src/eel_frontend/: main.html
src/network/: link_graph.py
src/simsig/: __init__.py  local_timetable.py  version.py  wtt.py
src/train/: __init__.py  dwell_times.py  speed_class.py  train_category.py
src/ttbuilder/: origin_dest.py  ttbuilder.py
src/ttbuilder/common/: activity.py  allowance.py  location.py  str_helper.py  timing_point.py  train_id.py  ttime.py
src/ttbuilder/network/: link_graph.py
src/ttbuilder/simsig/: __init__.py  local_timetable.py  ssg.py  wtt.py
src/ttbuilder/text_parser/: timetable.lark  tt_parser.py  ttime.lark  ttime_parser.py
src/ttbuilder/train/: accel_brake.py  dwell_times.py  power_type.py  train_category.py  weight.py
tests/: conftest.py  test_activity.py  test_cajontime.py  test_elements.py  test_hello_add.py  test_helper.py  test_local_timetable.py  test_local_timetable_str.py  test_timing_point.py  test_train_category.py  test_train_types.py  test_version.py  test_wtt.py  test_xml_helper.py  test_xml_test_tools.py
tests/1M45/aston/: 1M45 demo.WTT
tests/1M45/derby/: SavedTimetable (entrypoint).xml  (+1 more)
tests/common/: test_activity.py  test_location.py  test_str_helper.py  test_time.py  test_timing_point.py  test_train_id.py
tests/geography/: test_timing_point_graph.py
tests/network/: test_link_graph.py
tests/sample/: SavedTimetable.xml  activities.xml  aston_2A01.xml  aston_2A03.xml  aston_2A04.xml  aston_cleaned.ssg  aston_empty.wtt  aston_empty_SavedTimetable.xml  aston_empty_TimetableHeader.xml  aston_none.WTT  aston_none_SavedTimetable.xml  aston_none_TimetableHeader.xml  basic_SavedTimetable.xml  cleaned.ssg  train_types.wtt  train_types_SavedTimetable.xml
tests/simsig/: test_local_timetable.py  test_ssg_parser.py  test_version.py  test_wtt.py
tests/text_parser/: test_parse_activity.py  test_parse_timetable.py  test_parse_timing_point.py  test_parse_train_category.py  test_parse_train_id.py  test_parse_ttime.py  test_ttime_parser.py
tests/train/: test_accel_brake.py  test_dwell_times.py  test_power_type.py  test_speed_class.py  test_train_category.py  test_weight.py
ttbuilder/: ttbuilder.py
ttbuilder/common/: __init__.py  activity.py  location.py  train_id.py  ttime.py
ttbuilder/simsig/: wtt.py
ttbuilder/train/: __init__.py  dwell_times.py  train_category.py
(+6 files in other folders)
