[project]
name = "ttbuilder"
version = "0.1.0"
dependencies = ["lark", "lxml", "networkx"]
requires-python = ">=3.10"
authors = [{ name = "Jack Deeth" }]
description = "Timetable builder for SimSig"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "hypothesis",
    "pylint",
    "pytest",
    "pytest-cov",
    "xmldiff",
]

[project.urls]
Repository = "https://github.com/jdeeth/ttbuilder"
Issues = "https://github.com/jdeeth/ttbuilder/issues"

[project.scripts]
ttbuilder = "ttbuilder.ttbuilder:main"
origin_dest_export = "ttbuilder.origin_dest:export"

[build-system]
requires = ["setuptools"]

[tool.pytest.ini_options]
xfail_strict = true
addopts = "--cov=src -p no:faulthandler --strict-markers"
markers = ["wip: work in progress"]

[tool.pylint.MAIN]
disable = "missing-module-docstring"
extension-pkg-allow-list = "lxml"
no-docstring-rgx = "^_|^(test|fixture)_"

[tool.setuptools]
package-dir = { "" = "src" }
