[metadata]
name = ttbuilder
version = 0.1.0
author = Jack Deeth
description = Timetable builder for SimSig
license = MIT
license_files = LICENSE

[options]
packages = find:
package_dir = 
    = src
python_requires = >= 3.10
#install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    ttbuilder=ttbuilder:main

[options.extras_require]
dev =
    coverage
    pytest
    pytest-cov
    hypothesis
    pylint
    black
    
[tool:pytest]
xfail_strict = true
addopts =
    --cov=src
    -p no:faulthandler
    --strict-markers
markers =
    wip: work in progress
